tests/snapshots/test_help__adr_get_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl adr get --help
Get ADR metadata or specific field

Usage: govctl adr get [OPTIONS] <ID> [FIELD]

Arguments:
  <ID>
          Artifact ID

  [FIELD]
          Field name or path (omit to show all)

Options:
  -C, --config <CONFIG>
          Path to govctl config (TOML)

  -o, --output <OUTPUT>
          Output format; valid formats depend on whether FIELD is present

          Possible values:
          - table: Human-readable table for complete resources
          - json:  JSON structured data
          - yaml:  YAML structured data
          - toml:  TOML structured data for complete resources
          - plain: Plain text for logical field values

      --dry-run
          Dry run: preview changes without writing files

  -h, --help
          Print help (see a summary with '-h')

VALID FIELDS:
    - title, date, status, superseded_by
    - context, decision, consequences, refs, alternatives

EXAMPLES:
    govctl adr get ADR-0001
    govctl adr get ADR-0001 decision
    govctl adr get ADR-0001 alternatives[0].status
exit: 0
