tests/snapshots/test_help__adr_root_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl adr --help
ADR operations

Usage: govctl adr [OPTIONS] <COMMAND>

Commands:
  list       List ADRs
  get        Get ADR metadata or specific field
  show       Show rendered ADR content
  new        Create a new ADR
  edit       Canonical path-first edit entrypoint
  accept     Accept ADR (proposed → accepted)
  reject     Reject ADR (proposed → rejected)
  supersede  Supersede ADR
  render     Render a single ADR to markdown
  help       Print this message or the help of the given subcommand(s)

Options:
  -C, --config <CONFIG>  Path to govctl config (TOML)
      --dry-run          Dry run: preview changes without writing files
  -h, --help             Print help

COMMON WORKFLOW:
    1. `govctl adr list` to discover ADRs
    2. `govctl adr get <ID> ...` for metadata/fields
    3. `govctl adr show <ID>` for current rendered prose (`--history` for the archive)
    4. `govctl adr edit` to work through alternatives
    5. `govctl adr accept/reject/...` for lifecycle

START HERE:
    - New ADR: `govctl adr new "Title"`
    - Inspect one ADR: `govctl adr get ADR-0001`
    - Move an alternative to accepted: `govctl adr edit ADR-0001 "alternatives[0]" --tick accepted`
exit: 0
