tests/snapshots/test_help__clause_edit_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl clause edit --help
Canonical path-first clause edit entrypoint

Usage: govctl clause edit [OPTIONS] <ID> <PATH>

Arguments:
  <ID>
          Artifact ID

  <PATH>
          Canonical field path

Options:
  -C, --config <CONFIG>
          Path to govctl config (TOML)

      --set [<SET>]
          Set a scalar value (omit VALUE only when using --stdin)

      --add [<ADD>]
          Append a value to a list (omit VALUE only when using --stdin)

      --dry-run
          Dry run: preview changes without writing files

      --remove [<REMOVE>]
          Remove a matching value, or omit PATTERN when removing an indexed path

      --tick <TICK>
          Update checklist-style item status

          Possible values:
          - done:       Mark work items as done
          - pending:    Mark work items as pending
          - cancelled:  Mark work items as cancelled
          - accepted:   Mark ADR alternatives as accepted
          - considered: Mark ADR alternatives as considered
          - rejected:   Mark ADR alternatives as rejected

      --stdin
          Read set/add value from stdin

      --regex
          Treat the remove value as a regular expression

      --all
          Remove every item from the addressed list

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
    govctl clause edit RFC-0001:C-SUMMARY text --set "Updated clause text"
    govctl clause edit RFC-0001:C-SUMMARY text --stdin
    govctl clause edit RFC-0001:C-SUMMARY title --set "New Title"
    govctl clause edit RFC-0001:C-SUMMARY kind --set informative
exit: 0
