tests/snapshots/test_help__clause_root_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl clause --help
Clause operations

Usage: govctl clause [OPTIONS] <COMMAND>

Commands:
  list       List clauses
  get        Get clause metadata or specific field
  show       Show rendered clause content
  new        Create a new clause
  edit       Canonical path-first clause edit entrypoint
  delete     Delete clause
  deprecate  Deprecate clause
  supersede  Supersede clause
  help       Print this message or the help of the given subcommand(s)

Options:
  -C, --config <CONFIG>  Path to govctl config (TOML)
      --dry-run          Dry run: preview changes without writing files
  -h, --help             Print help

COMMON WORKFLOW:
    1. `govctl clause list` to discover clauses
    2. `govctl clause get <ID> ...` for metadata/fields
    3. `govctl clause show <ID>` for current clause text (`--history` for the archive)
    4. `govctl clause edit <ID> ...` to update content
    5. `govctl clause deprecate/supersede` for lifecycle

START HERE:
    - New clause: `govctl clause new RFC-0001:C-SCOPE "Scope"`
    - Inspect one clause: `govctl clause get RFC-0001:C-SCOPE`

NOTES:
    - Always use the root `govctl clause` namespace for Clause operations, even though Clause storage and IDs are scoped by an RFC.
exit: 0
