tests/snapshots/test_help__guard_root_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl guard --help
Verification guard operations

Usage: govctl guard [OPTIONS] <COMMAND>

Commands:
  list    List guards
  get     Get guard metadata or specific field
  show    Show rendered guard content
  new     Create a new verification guard
  edit    Canonical path-first edit entrypoint
  delete  Delete a verification guard
  help    Print this message or the help of the given subcommand(s)

Options:
  -C, --config <CONFIG>  Path to govctl config (TOML)
      --dry-run          Dry run: preview changes without writing files
  -h, --help             Print help

COMMON WORKFLOW:
    1. `govctl guard list` to discover guards
    2. `govctl guard get <ID> ...` for metadata/fields
    3. `govctl guard edit` to define checks
    4. `govctl verify <GUARD-ID>` or `govctl verify --work <WI-ID>` to run guards

START HERE:
    - New guard: `govctl guard new "clippy lint"`
    - Inspect one guard: `govctl guard get GUARD-CLIPPY`
exit: 0
