tests/snapshots/test_help__loop_root_help.snap
---
source: tests/test_help.rs
expression: "normalize_output(&output, temp_dir.path(), &date)?"
---
$ govctl loop --help
Loop execution-state commands

Usage: govctl loop [OPTIONS] <COMMAND>

Commands:
  start   Start a loop for one or more explicit work items
  show    Show persisted loop state
  resume  Resume or inspect an existing non-terminal loop
  help    Print this message or the help of the given subcommand(s)

Options:
  -C, --config <CONFIG>  Path to govctl config (TOML)
      --dry-run          Dry run: preview changes without writing files
  -h, --help             Print help

COMMON WORKFLOW:
    1. `govctl loop start WI-<DATE>-001` to create local loop state
    2. `govctl loop show <LOOP-ID>` to inspect persisted state
    3. `govctl loop resume WI-<DATE>-001` to find matching non-terminal state

NOTES:
    - Loop state is local under `.govctl/loops/<LOOP-ID>/state.toml`.
    - These commands manage loop state and planning only; execution rounds are separate.
exit: 0
