tests/snapshots/test_help__rfc_bump_help.snap
---
source: tests/test_help.rs
expression: normalized
---
$ govctl rfc bump --help
Bump RFC version

Usage: govctl rfc bump [OPTIONS] <ID>

Arguments:
  <ID>  RFC ID

Options:
  -C, --config <CONFIG>    Path to govctl config (TOML)
      --patch              Patch version bump
      --dry-run            Dry run: preview changes without writing files
      --minor              Minor version bump
      --major              Major version bump
  -m, --summary <SUMMARY>  Changelog summary
  -c, --change <CHANGES>   Add change description(s)
  -h, --help               Print help

EXAMPLES:
    govctl rfc bump RFC-0001 --patch -m "Clarify examples"
    govctl rfc bump RFC-0001 --minor -m "Add a normative clause" -c "change: Define the new behavior"
    govctl rfc bump RFC-0001 -c "fix: Correct current-version wording"

NOTES:
    - Version-changing bumps require a normative RFC in impl, test, or stable with a sealed signature.
    - While an RFC is in spec, continue authoring the current version candidate instead of bumping again.
    - Bump flags select literal SemVer components; they are not remapped impact labels.
    - For 0.y.z, use `--minor` for a breaking pre-1.0 amendment; `--major` deliberately advances to 1.0.0.
    - `--change` without a bump level updates the current changelog entry without changing version.
    - Use `-m/--summary` for a release summary and `-c/--change` for detailed entries.
exit: 0
